# products-catalog-api

./: .env.template  .gitignore  README.md  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
src/: api.py  main.py  seed.py  seed_products.py
src/admin_notifications/: controller.py  models.py  services.py
src/auth/: controller.py  models.py  service.py
src/brands/: controller.py  models.py  services.py
src/database/: core.py
src/entities/: action_status.py  admin_notification.py  brand.py  notification_status.py  permission.py  product.py  product_change_log.py  product_view.py  role.py  role_permission.py  user.py  user_change_log.py  user_role.py  user_session.py
src/health/: controller.py
src/notifications/: services.py
src/permissions/: controller.py  models.py  services.py
src/product_change_logs/: controller.py  models.py  services.py
src/product_views/: controller.py  models.py  services.py
src/products/: controller.py  models.py  services.py
src/roles/: controller.py  models.py  services.py
src/user_change_logs/: controller.py  models.py  services.py
src/user_sessions/: controller.py  models.py  services.py
src/users/: controller.py  models.py  service.py
tests/: conftest.py  test_products.py  test_users.py
